--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     networks:
       - inception
     env_file:
-      - .env
+      - ~/.env
     depends_on:
       - wordpress
     restart: on-failure:5
@@ -27,7 +27,7 @@ services:
     networks:
       - inception
     env_file:
-      - .env
+      - ~/.env
     restart: on-failure:5
 
   wordpress:
@@ -39,7 +39,7 @@ services:
     networks:
       - inception
     env_file:
-      - .env
+      - ~/.env
     depends_on:
       - mariadb
     restart: on-failure:5
