--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -61,7 +61,7 @@ http {
 	server {
      		# Listen on port 443 for HTTPS with SSL/TLS
 	        listen 443 ssl;
-	        server_name antferna.42.fr;
+	        server_name domain_name;
 
 	        # SSL/TLS configuration for secure connections
 	        ssl_certificate /etc/nginx/ssl/antferna.42.fr.crt; # Path to the SSL certificate
