--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,106 +4,63 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-	worker_connections 768;
-	# multi_accept on;
+    worker_connections 768;
 }
 
 http {
+    sendfile on;
+    tcp_nopush on;
+    types_hash_max_size 2048;
 
-	##
-	# Basic Settings
-	##
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-	sendfile on;
-	tcp_nopush on;
-	types_hash_max_size 2048;
-	# server_tokens off;
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+    # Gzip compression
+    gzip on;
 
-	##
-	# SSL Settings
-	##
+    # Virtual host configuration
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_prefer_server_ciphers on;
+    server {
+        listen 443 ssl;
+        server_name domain_name;
 
-	##
-	# Logging Settings
-	##
+        ssl_certificate /etc/nginx/ssl/antferna.42.fr.crt;
+        ssl_certificate_key /etc/nginx/ssl/antferna.42.fr.key;
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+        root /var/www/html/wordpress;
+        index index.php;
 
-	##
-	# Gzip Settings
-	##
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
 
-	gzip on;
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        # Redirect HTTP to HTTPS
+        if ($scheme = http) {
+            return 400;
+        }
 
-	##
-	# Virtual Host Configs
-	##
+        # PHP processing
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass wordpress:9000;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
-
-	server {
-     		# Listen on port 443 for HTTPS with SSL/TLS
-	        listen 443 ssl;
-	        server_name domain_name;
-
-	        # SSL/TLS configuration for secure connections
-	        ssl_certificate /etc/nginx/ssl/antferna.42.fr.crt; # Path to the SSL certificate
-	        ssl_certificate_key /etc/nginx/ssl/antferna.42.fr.key; # Path to the SSL certificate key
-	        ssl_protocols TLSv1.2 TLSv1.3; # Enable modern TLS protocols
-
-	        # Define the root directory and index file for the site
-	        index index.php;
-	        root /var/www/html/wordpress;
-
-	        # Handle requests by trying files or fallback to index.php
-	        location / {
-	            try_files $uri $uri/ /index.php?$args;
-	        }
-
-		if ($scheme = http) {
- 		   return 400;
-		}
-
-	        # Process PHP files using FastCGI and pass to the WordPress container
-	        location ~ \.php$ {
-	            include snippets/fastcgi-php.conf;
-        	    fastcgi_pass wordpress:9000;
-	            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	            include fastcgi_params;
-	        }
-
-	        #Cache static files like images, CSS, and JavaScript for improved performance
-	        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-	            expires 30d;
-	            access_log off;
-	        }
-
-		# ******** BONUS *********
-
-	        # Proxy requests to Adminer service for database management
-	        #location /adminer {
-	        #    proxy_pass http://adminer:8080;
-        	#    proxy_set_header Host $host;
-	        #    proxy_set_header X-Real-IP $remote_addr;
-        	#    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	        #    proxy_set_header X-Forwarded-Proto $scheme;
-	        #}
-	    }
+        # Static file caching
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 30d;
+            access_log off;
+        }
+    }
 }
