--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
     worker_connections 768;
@@ -8,8 +9,22 @@ events {
 
 http {
     sendfile on;
+    tcp_nopush on;
+    types_hash_max_size 2048;
+
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Gzip compression
+    gzip on;
 
     # Virtual host configuration
     include /etc/nginx/conf.d/*.conf;
@@ -19,9 +34,8 @@ http {
         listen 443 ssl;
         server_name domain_name;
 
-        ssl_certificate certificate;
+        ssl_certificate certificate
         ssl_certificate_key certificate_key;
-        ssl_protocols TLSv1.2 TLSv1.3;
 
         root /var/www/html/wordpress;
         index index.php;
@@ -30,12 +44,23 @@ http {
             try_files $uri $uri/ /index.php?$args;
         }
 
-        # PHP processing for WordPress
+        # Redirect HTTP to HTTPS
+        if ($scheme = http) {
+            return 400;
+        }
+
+        # PHP processing
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
+        }
+
+        # Static file caching
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 30d;
+            access_log off;
         }
     }
 }
