--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -34,7 +34,7 @@ http {
         listen 443 ssl;
         server_name domain_name;
 
-        ssl_certificate certificate
+        ssl_certificate certificate;
         ssl_certificate_key certificate_key;
 
         root /var/www/html/wordpress;
