--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -34,8 +34,8 @@ http {
         listen 443 ssl;
         server_name domain_name;
 
-        ssl_certificate certificate;
-        ssl_certificate_key certificate_key;
+        ssl_certificate /etc/nginx/ssl/antferna.42.fr.crt;
+        ssl_certificate_key /etc/nginx/ssl/antferna.42.fr.key;
 
         root /var/www/html/wordpress;
         index index.php;
