--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,7 +8,7 @@ RUN set -eux; \
         apt-get clean && \
         rm -rf /var/lib/apt/lists/*
 
-COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.conf
+COPY ./conf/mariadb.cnf /etc/mysql/mariadb.conf.d/mariadb.conf
 COPY ./tools/init.sh /init.sh
 
 RUN chmod +x init.sh
